tests/agl/rejections/type/duplicate_call_option.agl
let x: json = ask[strict_json: true, strict_json: true] "Question."
